--- a/index.html
+++ b/index.html
@@ -71,37 +71,29 @@
       <main class="page-content">
         <!-- About-->
         <!--<section class="bg-white section-50 section-lg-80 section-xl-100">-->
-          <section class="section-55 section-sm-80 section-xl-240 bg-image bg-image-2 bg-fixed section-lg-140 section-md-100">
-          <div id="about" data-type="anchor" class="shell shell-wide">
-            <div class="range text-center">
-              <div class="cell-lg-5 text-md-left text-lg-right">
-                <!--<div class="count count-porcelain"></div>-->
-                <div class="box-wrap text-md-left">
-                  <h2 class="heading">about</h2>
-                  <p>
-                    I am a researcher specializing in the application of machine learning to astrophysical problems, with a parallel focus on theoretical and computational astrophysics. My expertise spans time-domain classification, anomaly detection, and high-resolution hydrodynamical simulations of turbulence and particle–gas interactions. I began studying machine learning in 2016 and published my first work in 2019, developing MicroLIA, the first machine learning classifiers for microlensing detection in wide-field, low-cadence surveys.
-                  </p>
-                  <p>  
-                    During my PhD, I developed the first scalable machine learning pipeline for detecting Lyman-alpha blobs (LABs) using only broadband imaging, enabling blind searches for these rare, high-redshift sources across wide-field survey data. This pioneering, multi-stage framework overcame the limitations of narrowband selection by combining ensemble classifiers, anomaly detection, and a convolutional neural network to identify LAB candidates directly from broadband morphology and color.
-                  </p>
-                  <p> 
-                    In parallel, I have conducted theoretical work on solid concentration and planetesimal formation in turbulent disks. I used 3D self-gravitating simulations of the streaming instability to show that overdense filaments generate optically thick sub-millimeter emission, leading to significant underestimates of disk mass when standard optically thin assumptions are applied. This work combined large-scale numerical modeling on HPC systems with radiative transfer post-processing, including dust scattering, to produce synthetic ALMA observables and quantify the mass bias introduced by unresolved small-scale structure.
-                  </p>
-                  <p> 
-                    I have also contributed to dark matter research, using microlensing as a probe of compact dark objects. In one study, we projected LSST constraints on the abundance of primordial black holes (PBHs) as a dark matter component, demonstrating that control of the false positive rate is critical for achieving competitive limits. By simulating realistic light curves and evaluating classifiers based on χ², Boosted Decision Trees, and Bayesian-based model selection, we showed how machine learning can enhance PBH sensitivity in next-generation time-domain surveys. In related work, we applied unsupervised anomaly detection to identify microlensing events directly from LSST-like light curves, enabling real-time filtering of rare transients -- including those caused by compact dark matter -- with minimal assumptions about signal shape.
-                  </p>
-                  <p> 
-                    I am an active member of the LSST microlensing science collaboration, where I continue to lead the development of MicroLIA and support efforts to detect and characterize microlensing events in LSST data.
-                  </p>
-                </div>
+       <section class="section-55 section-sm-80 section-xl-240 bg-image bg-image-2 bg-fixed section-lg-140 section-md-100">
+        <div id="about" data-type="anchor" class="shell shell-wide">
+          <div class="range text-center">
+            <div class="cell-lg-5 text-md-left text-lg-right">
+              <div class="box-wrap text-md-left">
+                <h2 class="heading">about</h2>
+                <p>
+                  I'm a researcher exploring how machine learning can help us uncover the rarest and most intriguing astrophysical phenomena — from microlensing and dark matter to Lyman-alpha blobs and protoplanetary disks. My projects combine large-scale simulations, custom classifiers, and a deep love for both data and discovery.
+                </p>
+                <p>
+                  Curious about my work? Head to the <a href="#interests">Interests section</a> below — each image links to one of my current projects in astrophysics and machine learning.
+                </p>
               </div>
-              <div class="cell-lg-preffix-1 cell-lg-6"><img src="images/id_photo.jpeg" width="695" height="768" alt="" class="img-responsive offset-xl-top--220 image-wrap"></div>
+            </div>
+            <div class="cell-lg-preffix-1 cell-lg-6">
+              <img src="images/id_photo.jpeg" width="695" height="768" alt="" class="img-responsive offset-xl-top--220 image-wrap">
             </div>
           </div>
-          </section>
+        </div>
+      </section>
 
         <!-- Interests-->
-        <!-- Updated Interests Section: single-column layout with image and paragraph side by side -->
+        <!-- Interests Section: single-column layout with image and paragraph side by side -->
         <section class="page-head bg-image bg-image-2 bg-fixed section-55 section-sm-80 section-xl-bottom-270 section-lg-80">
           <div class="shell shell-wide">
             <!-- Caption above heading -->
@@ -120,33 +112,22 @@
                 </a>
                 <div class="interest-content">
                   <h4><a href="science/microlensing">Microlensing</a></h4>
-                  <p>I began studying machine learning in 2016 and published my first work in 2019, developing MicroLIA, the first machine learning classifiers for microlensing detection in wide-field, low-cadence surveys. I am an active member of the LSST microlensing science collaboration, where I continue to lead the development of MicroLIA and support efforts to detect and characterize microlensing events in LSST data.</p>
+                  <p>I began studying machine learning in 2016 and published my first work in 2019, developing MicroLIA, the first machine‑learning classifier for microlensing detection in wide‑field, low‑cadence surveys. I am an active member of the LSST Microlensing Science Collaboration, where I continue to lead MicroLIA development and support efforts to detect and characterize microlensing events in LSST data.</p>
                 </div>
               </div>
 
               <!-- Interest Item 2 -->
               <div class="interest-item">
-                <a href="science/green-beans" class="interest-img">
-                  <img src="images/green_bean_250.jpg" alt="Green Beans" class="img-responsive">
+                <a href="science/blobs" class="interest-img">
+                  <img src="images/blob_250.jpg" alt="Lyman‑alpha Blobs" class="img-responsive">
                 </a>
                 <div class="interest-content">
-                  <h4><a href="science/green-beans">Green Bean Galaxies</a></h4>
-                  <p>Summary...</p>
+                  <h4><a href="science/blobs">Lyman-alpha Blobs</a></h4>
+                  <p>I developed the first scalable machine learning pipeline for detecting Lyman-alpha blobs (LABs) using only broadband imaging, enabling blind searches for these rare, high-redshift sources across wide-field survey data. This pioneering, multi-stage framework overcame the limitations of narrowband selection by combining ensemble classifiers, anomaly detection, and a convolutional neural network to identify LAB candidates directly from broadband morphology and color.</p>
                 </div>
               </div>
 
               <!-- Interest Item 3 -->
-              <div class="interest-item">
-                <a href="science/blobs" class="interest-img">
-                  <img src="images/blob_250.jpg" alt="Lyman-alpha Blobs" class="img-responsive">
-                </a>
-                <div class="interest-content">
-                  <h4><a href="science/blobs">Lyman-alpha Blobs</a></h4>
-                  <p>During my PhD, I developed the first scalable machine learning pipeline for detecting Lyman-alpha blobs (LABs) using only broadband imaging, enabling blind searches for these rare, high-redshift sources across wide-field survey data. This pioneering, multi-stage framework overcame the limitations of narrowband selection by combining ensemble classifiers, anomaly detection, and a convolutional neural network to identify LAB candidates directly from broadband morphology and color.</p>
-                </div>
-              </div>
-
-              <!-- Interest Item 4 -->
               <div class="interest-item">
                 <a href="science/planet9" class="interest-img">
                   <img src="images/protodisk_250.jpg" alt="Protostellar Disks" class="img-responsive">
@@ -157,10 +138,10 @@
                 </div>
               </div>
 
-              <!-- Interest Item 5 -->
+              <!-- Interest Item 4 -->
               <div class="interest-item">
                 <a href="science/slime-mold" class="interest-img">
-                  <img src="images/dark_matter_250.jpg" alt="Slime Mold" class="img-responsive">
+                  <img src="images/dark_matter_250.jpg" alt="Dark Matter" class="img-responsive">
                 </a>
                 <div class="interest-content">
                   <h4><a href="science/slime-mold">Dark Matter</a></h4>
@@ -168,30 +149,33 @@
                 </div>
               </div>
 
+              <!-- Interest Item 5 -->
+              <div class="interest-item">
+                <a href="science/green-beans" class="interest-img">
+                  <img src="images/green_bean_250.jpg" alt="Green Bean Galaxies" class="img-responsive">
+                </a>
+                <div class="interest-content">
+                  <h4><a href="science/green-beans">Green Bean Galaxies</a></h4>
+                  <p>Summary...</p>
+                </div>
+              </div>
+
               <!-- Interest Item 6 -->
               <div class="interest-item">
                 <a href="science/yum" class="interest-img">
-                  <img src="images/fluffy_250.jpg" alt="Fluffy Astrophysics" class="img-responsive">
+                  <img src="images/fluffy_250.jpg" alt="Food" class="img-responsive">
                 </a>
                 <div class="interest-content">
-                  <h4><a href="science/yum">Fluffy Astrophysics</a></h4>
-                  <p>Insert a short, inviting description of this interest area—perhaps a playful research pursuit!</p>
+                  <h4><a href="science/yum">Food!</a></h4>
+                  <p>I’m willing to drive up to six hours (one way) for yummy food.</p>
                 </div>
               </div>
 
             </div> <!-- /.interests-list -->
-
-            <!-- Tutorials Section -->
-            <div class="tutorials-section mt-5">
-              <h2 class="heading text-center">Tutorials</h2>
-              <p class="text-center inset-xl-right-80">
-                I post machine learning tutorials in the context of astronomy research, check them out <b><a href="machine-learning">here.</a></b> If you have any questions or suggestions, please <b><a href="#contacts">contact me.</a></b>
-              </p>
-            </div>
           </div> <!-- /.shell -->
         </section>
 
-        <!-- Styles specific to Interests & Tutorials section -->
+        <!-- Styles specific to Interests section -->
         <style>
           .interests-list {
             display: flex;
@@ -229,6 +213,7 @@
             }
           }
         </style>
+
         <!-- Space news-->
         <section class="section-55 section-sm-80 section-xl-240 bg-image bg-image-2 bg-fixed section-lg-140 section-md-100">
           <div class="shell shell-wide">
