--- a/index.html
+++ b/index.html
@@ -78,10 +78,14 @@
               <div class="box-wrap text-md-left">
                 <h2 class="heading">about</h2>
                 <p>
-                  I'm a researcher exploring how machine learning can help us uncover the rarest and most intriguing astrophysical phenomena — from microlensing and dark matter to Lyman-alpha blobs and protoplanetary disks. My projects combine large-scale simulations, custom classifiers, and a deep love for both data and discovery.
+                  I grew up in Santa Barbara, California, and received a BA in Physics from Bard College in 2018. My specialization in machine learning began during my undergraduate years through a three-year internship and collaboration with scientists at Las Cumbres Observatory. After college, I worked at Yardi Systems for three years, where I provided technical support and was quickly promoted to a consultant role. There, I led client-facing projects and gained valuable experience translating complex systems into practical solutions.
                 </p>
                 <p>
-                  Curious about my work? Head to the <a href="#interests">Interests section</a> below — each image links to one of my current projects in astrophysics and machine learning.
+                  In 2021, I began my Ph.D. at New Mexico State University and will be graduating soon. My current research focuses on using machine learning to uncover some of the rarest and most intriguing astrophysical phenomena, with published work spanning galactic and extragalactic science—including microlensing, dark matter, Lyman-alpha blobs, and protoplanetary disks. This work brings together large-scale simulations, machine learning, and a deep love for both data and discovery.
+                </p>
+                <p>
+                  I have experience in theoretical astrophysics and hydrodynamical simulations, as well as expertise in applying machine learning to large astronomical datasets, particularly in weakly supervised settings where ground truth is scarce.
+                </p>
                 </p>
               </div>
             </div>
@@ -91,89 +95,91 @@
           </div>
         </div>
       </section>
+      <!-- Interests-->
+      <!-- Interests Section: single-column layout with image and paragraph side by side -->
+      <section class="page-head bg-image bg-image-2 bg-fixed section-55 section-sm-80 section-xl-bottom-270 section-lg-80">
+        <div class="shell shell-wide">
+          <!-- Caption above heading wrapped in original box -->
+          <div class="box-wrap-1 text-center mb-3">
+            <div class="box-wrap-1-caption">
+              <div class="h2 heading heading-mod"></div>
+              <div class="h7"><br><b><font size="+1">Click on the images to learn about my current pursuits!</font></b></div>
+            </div>
+          </div>
 
-        <!-- Interests-->
-        <!-- Interests Section: single-column layout with image and paragraph side by side -->
-        <section class="page-head bg-image bg-image-2 bg-fixed section-55 section-sm-80 section-xl-bottom-270 section-lg-80">
-          <div class="shell shell-wide">
-            <!-- Caption above heading -->
-            <div class="text-center mb-3">
-              <span class="h7"><b><font size="+1">Click on the images to learn about my current pursuits!</font></b></span>
+          <h2 class="heading heading-custom text-center">Interests</h2>
+
+          <div class="interests-list">
+
+            <!-- Interest Item 1 -->
+            <div class="interest-item">
+              <a href="science/microlensing" class="interest-img">
+                <img src="images/microlensing_250.jpg" alt="Microlensing" class="img-responsive">
+              </a>
+              <div class="interest-content">
+                <h4><a href="science/microlensing">Microlensing</a></h4>
+                <p>I began studying machine learning in 2016 and published my first work in 2019, developing MicroLIA, the first machine‑learning classifier for microlensing detection in wide‑field, low‑cadence surveys. I am an active member of the LSST Microlensing Science Collaboration, where I continue to lead MicroLIA development and support efforts to detect and characterize microlensing events in LSST data.</p>
+              </div>
             </div>
 
-            <h2 class="heading heading-custom text-center">Interests</h2>
-
-            <div class="interests-list">
-
-              <!-- Interest Item 1 -->
-              <div class="interest-item">
-                <a href="science/microlensing" class="interest-img">
-                  <img src="images/microlensing_250.jpg" alt="Microlensing" class="img-responsive">
-                </a>
-                <div class="interest-content">
-                  <h4><a href="science/microlensing">Microlensing</a></h4>
-                  <p>I began studying machine learning in 2016 and published my first work in 2019, developing MicroLIA, the first machine‑learning classifier for microlensing detection in wide‑field, low‑cadence surveys. I am an active member of the LSST Microlensing Science Collaboration, where I continue to lead MicroLIA development and support efforts to detect and characterize microlensing events in LSST data.</p>
-                </div>
+            <!-- Interest Item 2 -->
+            <div class="interest-item">
+              <a href="science/blobs" class="interest-img">
+                <img src="images/blob_250.jpg" alt="Lyman‑alpha Blobs" class="img-responsive">
+              </a>
+              <div class="interest-content">
+                <h4><a href="science/blobs">Lyman‑alpha Blobs</a></h4>
+                <p>I developed the first scalable machine‑learning pipeline for detecting Lyman‑alpha blobs (LABs) using only broadband imaging, enabling blind searches for these rare, high‑redshift sources across wide‑field survey data. This multi‑stage framework combines ensemble classifiers, anomaly detection, and a convolutional neural network to identify LAB candidates directly from morphology and colour.</p>
               </div>
+            </div>
 
-              <!-- Interest Item 2 -->
-              <div class="interest-item">
-                <a href="science/blobs" class="interest-img">
-                  <img src="images/blob_250.jpg" alt="Lyman‑alpha Blobs" class="img-responsive">
-                </a>
-                <div class="interest-content">
-                  <h4><a href="science/blobs">Lyman-alpha Blobs</a></h4>
-                  <p>I developed the first scalable machine learning pipeline for detecting Lyman-alpha blobs (LABs) using only broadband imaging, enabling blind searches for these rare, high-redshift sources across wide-field survey data. This pioneering, multi-stage framework overcame the limitations of narrowband selection by combining ensemble classifiers, anomaly detection, and a convolutional neural network to identify LAB candidates directly from broadband morphology and color.</p>
-                </div>
+            <!-- Interest Item 3 -->
+            <div class="interest-item">
+              <a href="science/planet9" class="interest-img">
+                <img src="images/protodisk_250.jpg" alt="Protostellar Disks" class="img-responsive">
+              </a>
+              <div class="interest-content">
+                <h4><a href="science/planet9">Protoplanetary Disks</a></h4>
+                <p>I use 3‑D self‑gravitating simulations of the streaming instability to study solid concentration and planetesimal formation in turbulent disks. My work shows that overdense filaments generate optically thick sub‑millimetre emission, leading to significant disk‑mass underestimates when optically thin assumptions are applied. Radiative‑transfer post‑processing, including dust scattering, links these simulations to ALMA observables.</p>
               </div>
+            </div>
 
-              <!-- Interest Item 3 -->
-              <div class="interest-item">
-                <a href="science/planet9" class="interest-img">
-                  <img src="images/protodisk_250.jpg" alt="Protostellar Disks" class="img-responsive">
-                </a>
-                <div class="interest-content">
-                  <h4><a href="science/planet9">Protoplanetary Disks</a></h4>
-                  <p>I have conducted theoretical work on solid concentration and planetesimal formation in turbulent disks. I used 3D self-gravitating simulations of the streaming instability to show that overdense filaments generate optically thick sub-millimeter emission, leading to significant underestimates of disk mass when standard optically thin assumptions are applied. This work combined large-scale numerical modeling on HPC systems with radiative transfer post-processing, including dust scattering, to produce synthetic ALMA observables and quantify the mass bias introduced by unresolved small-scale structure.</p>
-                </div>
+            <!-- Interest Item 4 -->
+            <div class="interest-item">
+              <a href="science/slime-mold" class="interest-img">
+                <img src="images/dark_matter_250.jpg" alt="Dark Matter" class="img-responsive">
+              </a>
+              <div class="interest-content">
+                <h4><a href="science/slime-mold">Dark Matter</a></h4>
+                <p>I use microlensing as a probe of compact dark objects. In one study we projected LSST constraints on primordial black‑hole dark matter, showing that controlling the false‑positive rate is critical for competitive limits. By simulating realistic light curves and evaluating classifiers—including χ² fits, boosted trees, and Bayesian model selection—we demonstrated how machine learning enhances PBH sensitivity in next‑generation surveys.</p>
               </div>
+            </div>
 
-              <!-- Interest Item 4 -->
-              <div class="interest-item">
-                <a href="science/slime-mold" class="interest-img">
-                  <img src="images/dark_matter_250.jpg" alt="Dark Matter" class="img-responsive">
-                </a>
-                <div class="interest-content">
-                  <h4><a href="science/slime-mold">Dark Matter</a></h4>
-                  <p>I have also contributed to dark matter research, using microlensing as a probe of compact dark objects. In one study, we projected LSST constraints on the abundance of primordial black holes (PBHs) as a dark matter component, demonstrating that control of the false positive rate is critical for achieving competitive limits. By simulating realistic light curves and evaluating classifiers based on χ², Boosted Decision Trees, and Bayesian-based model selection, we showed how machine learning can enhance PBH sensitivity in next-generation time-domain surveys. In related work, we applied unsupervised anomaly detection to identify microlensing events directly from LSST-like light curves, enabling real-time filtering of rare transients -- including those caused by compact dark matter -- with minimal assumptions about signal shape.</p>
-                </div>
+            <!-- Interest Item 5 -->
+            <div class="interest-item">
+              <a href="science/green-beans" class="interest-img">
+                <img src="images/green_bean_250.jpg" alt="Green Bean Galaxies" class="img-responsive">
+              </a>
+              <div class="interest-content">
+                <h4><a href="science/green-beans">Green Bean Galaxies</a></h4>
+                <p>Summary of current work on extreme emission‑line “Green Bean” galaxies—placeholder text to be expanded.</p>
               </div>
+            </div>
 
-              <!-- Interest Item 5 -->
-              <div class="interest-item">
-                <a href="science/green-beans" class="interest-img">
-                  <img src="images/green_bean_250.jpg" alt="Green Bean Galaxies" class="img-responsive">
-                </a>
-                <div class="interest-content">
-                  <h4><a href="science/green-beans">Green Bean Galaxies</a></h4>
-                  <p>Summary...</p>
-                </div>
+            <!-- Interest Item 6 -->
+            <div class="interest-item">
+              <a href="science/yum" class="interest-img">
+                <img src="images/fluffy_250.jpg" alt="Food" class="img-responsive">
+              </a>
+              <div class="interest-content">
+                <h4><a href="science/yum">Food!</a></h4>
+                <p>I’m willing to drive up to six hours (one way) for something truly delicious.</p>
               </div>
+            </div>
 
-              <!-- Interest Item 6 -->
-              <div class="interest-item">
-                <a href="science/yum" class="interest-img">
-                  <img src="images/fluffy_250.jpg" alt="Food" class="img-responsive">
-                </a>
-                <div class="interest-content">
-                  <h4><a href="science/yum">Food!</a></h4>
-                  <p>I’m willing to drive up to six hours (one way) for yummy food.</p>
-                </div>
-              </div>
-
-            </div> <!-- /.interests-list -->
-          </div> <!-- /.shell -->
-        </section>
+          </div> <!-- /.interests-list -->
+        </div> <!-- /.shell -->
+      </section>
 
         <!-- Styles specific to Interests section -->
         <style>
@@ -181,6 +187,7 @@
             display: flex;
             flex-direction: column;
             gap: 2rem; /* space between items */
+            margin-top: 2rem; /* space below heading */
           }
 
           .interest-item {
@@ -213,7 +220,6 @@
             }
           }
         </style>
-
         <!-- Space news-->
         <section class="section-55 section-sm-80 section-xl-240 bg-image bg-image-2 bg-fixed section-lg-140 section-md-100">
           <div class="shell shell-wide">
