--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <h3 class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">Phd Student<br class="hidden visible-lg-inline-block">
 
               </h3>
-              <p class="big postfix-xl-right--30">Fascinated by the computational techniques driving big data astronomy, I apply machine learning to detect rare astrophysical phenomena like <a style="font-weight:bold" href="https://microlia.readthedocs.io/en/latest/">microlensing events</a> and <a style="font-weight:bold" href="https://pybia.readthedocs.io/en/latest/">Lyman-alpha blobs.</a> My work spans time-domain classification, anomaly detection, and simulations of turbulence and particle–gas dynamics. All projects are open-source under the GNU General Public License and available on <a href="https://github.com/Professor-G"><b>GitHub.</b></a></p>
+              <p class="big postfix-xl-right--30">Fascinated by the computational techniques driving big data astronomy, I apply machine learning to detect rare astrophysical phenomena such as <a style="font-weight:bold" href="https://microlia.readthedocs.io/en/latest/">microlensing events</a> and <a style="font-weight:bold" href="https://pybia.readthedocs.io/en/latest/">Lyman-alpha blobs.</a> My work spans time-domain classification, anomaly detection, and simulations of turbulence and particle–gas dynamics. All projects are open-source under the GNU General Public License and available on <a href="https://github.com/Professor-G"><b>GitHub.</b></a></p>
 
               <p><font size="+3"><b><a href="machine-learning/">Machine Learning Tutorials</a></b></p>
               <p><b><a href="science/">Science Page</font></a></b></p>
@@ -81,10 +81,7 @@
                   I grew up in Santa Barbara, California, and received a BA in Physics from Bard College in 2018. My specialization in machine learning began during my undergraduate years through a three-year internship and collaboration with scientists at Las Cumbres Observatory. After college, I spent three years at Yardi Systems, a leading software provider for the global real estate industry, where I provided technical support and was quickly promoted to a consultant role. In that position, I led client-facing projects and gained valuable experience translating complex systems into practical solutions.
                 </p>
                 <p>
-                  In 2021, I began my Ph.D. at New Mexico State University and will be graduating soon. My current research focuses on using machine learning to uncover some of the rarest and most intriguing astrophysical phenomena, with published work spanning galactic and extragalactic science—including microlensing, dark matter, Lyman-alpha blobs, and protoplanetary disks. This work brings together large-scale simulations, machine learning, and a deep love for both data and discovery.
-                </p>
-                <p>
-                  I have experience in theoretical astrophysics and hydrodynamical simulations, as well as expertise in applying machine learning to large astronomical datasets, particularly in weakly supervised settings where ground truth is scarce.
+                  In 2021, I began my Ph.D. at New Mexico State University and will be graduating soon. My research focuses on using machine learning to uncover some of the rarest and most intriguing astrophysical phenomena, with published work spanning both galactic and extragalactic science, including microlensing, dark matter, Lyman-alpha blobs, and protoplanetary disks. I have experience in theoretical astrophysics, including large-scale hydrodynamical simulations, and expertise in applying machine learning to astronomical datasets, particularly in weakly supervised settings where ground truth is scarce. My work integrates theoretical modeling and data-driven methods to investigate the physics of complex astrophysical systems.
                 </p>
                 </p>
               </div>
