--- a/index.html
+++ b/index.html
@@ -98,9 +98,11 @@
         <div class="shell shell-wide">
           <!-- Combined heading and caption inside original box -->
           <div class="box-wrap-1 mb-3">
-            <div class="box-wrap-1-caption" style="display:flex; flex-wrap:wrap; justify-content:space-between; align-items:center; gap:1rem;">
-              <h2 class="heading heading-custom mb-0">Interests</h2>
-              <div class="h7"><b><font size="+1">Click on the images to learn about my current pursuits!</font></b></div>
+            <div class="box-wrap-1-caption text-center">
+              <h2 class="heading heading-custom mb-2">Interests</h2>
+              <div class="h7">
+                <b><font size="+1">Click on the images to learn about my current pursuits!</font></b>
+              </div>
             </div>
           </div>
 
