--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">
               <h1>Daniel Godines<br class="hidden visible-lg-inline-block">
               </h1>
-              <h3 class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">Phd Student<br class="hidden visible-lg-inline-block">
+              <h3 class="cell-lg-preffix-1 cell-lg-8 cell-xl-6">Doctoral Candidate<br class="hidden visible-lg-inline-block">
 
               </h3>
               <p class="big postfix-xl-right--30">Fascinated by the computational techniques driving big data astronomy, I apply machine learning to detect rare astrophysical phenomena such as <a style="font-weight:bold" href="https://microlia.readthedocs.io/en/latest/">microlensing events</a> and <a style="font-weight:bold" href="https://pybia.readthedocs.io/en/latest/">Lyman-alpha blobs.</a> My work spans time-domain classification, anomaly detection, and simulations of turbulence and particle–gas dynamics. All projects are open-source under the GNU General Public License and available on <a href="https://github.com/Professor-G"><b>GitHub.</b></a></p>
@@ -87,7 +87,7 @@
               </div>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-6">
-              <img src="images/id_photo.jpeg" width="695" height="768" alt="" class="img-responsive offset-xl-top--220 image-wrap">
+              <img src="images/about_me_photo.jpeg" width="695" height="768" alt="" class="img-responsive offset-xl-top--220 image-wrap">
             </div>
           </div>
         </div>
@@ -153,6 +153,7 @@
             </div>
 
             <!-- Interest Item 5 -->
+            <!-- 
             <div class="interest-item">
               <a href="science/green-beans" class="interest-img">
                 <img src="images/green_bean_250.jpg" alt="Green Bean Galaxies" class="img-responsive">
@@ -162,6 +163,7 @@
                 <p>Summary...</p>
               </div>
             </div>
+            -->
 
             <!-- Interest Item 6 -->
             <div class="interest-item">
