--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               </div>
             </div>
             <div class="cell-lg-preffix-1 cell-lg-6">
-              <img src="images/about_me_photo.jpeg" width="695" height="768" alt="" class="img-responsive offset-xl-top--220 image-wrap">
+              <img src="images/about_me_photo.jpeg" alt="" class="img-responsive offset-xl-top--220 image-wrap">
             </div>
           </div>
         </div>
