--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
                 </p>
               </div>
             </div>
-            <div class="cell-lg-preffix-1 cell-lg-6"><img src="images/about_me_photo.jpg" width="695" height="768" alt="" class="img-responsive offset-xl-top--220 image-wrap"></div>
+              <div class="cell-lg-preffix-1 cell-lg-6">
+              <img src="images/about_me_photo.jpg" width="695" height="768" alt="" class="img-responsive offset-xl-top--220 image-wrap">
+              <br>
+              <img src="images/conf_photo.jpg" width="695" height="768" alt="Additional Image" class="img-responsive image-wrap">
             </div>
           </div>
         </div>
